--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "todo",
+  "name": "spdureactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.22",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "12.12.6",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "bootstrap": "^4.3.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "lodash": "^4.17.15",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-dropdown": "^1.6.4",
+    "react-js-pagination": "^3.0.2",
+    "react-scripts": "3.2.0",
+    "react-slideshow-image": "^1.3.1",
+    "sass": "^1.23.7",
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.19.1",
+    "ts-node": "^8.5.2"
   }
 }
